dani ha finalmente iniziato a lavorare, che felicita

--- a/eq.html
+++ b/eq.html
@@ -27,7 +27,7 @@ pre{
   <div class="col-sm-3"></div>
   <div class="col-sm-6">
     <p></p>
-    <h1>Metodo di risoluzione delle equazioni del punto unito</h1>
+    <h5>Metodo di risoluzione delle equazioni del punto unito</h5>
     <br>
     <div class="row">
         grafico
@@ -64,75 +64,78 @@ pre{
 </div>
 -->
 <div class="row">
-   <div class="col-sm-6"> </div>
+   <div class="col-sm-3"> </div>
   <div class="col-sm-6">
-    <h1 style="text-align: center">Studia la tua funzione</h1>
+    <h1 style="text-align: center">FunFunction</h1>
   </div>
 </div>
 <div class="row">
-  <div class="col-sm-1"> </div>
-  <div class="col-sm-5"> 
-      <table style="width:100%">
-      <caption><h1 style="text-align: center;">RISULTATI</h1></caption>
-      <tr>
-        <th>C.E.</th>
-        <th>SIMMETRIA</th> 
-        <th>INTERSEZIONE CON GLI ASSI</th>
-      </tr>
-      <tr>
-        <td>Jill</td>
-        <td>Smith</td> 
-        <td>
-          <pre style="background: white"> ASSE X : 
-ASSE Y :
-          </pre>
-        </td>
-      </tr>
-      <tr>
-        <th>STUDIO DEL SEGNO</th>
-        <th>LIMITI</th> 
-        <th>DERIVATA PRIMA</th>
-      </tr>
-      <tr>
-        <td>Jill</td>
-        <td>Smith</td> 
-        <td>
-          <pre style="background: white"> ASSE X : 
-ASSE Y :
-          </pre>
-        </td>
-      </tr>
-       <tr>
-        <th>DERIVATA SECONDA</th>
-        <th>ASINTOTI OBLIQUI</th> 
-        <th>STUDIO DEGLI ZERI</th>
-      </tr>
-      <tr>
-        <td>Jill</td>
-        <td>Smith</td> 
-        <td>
-          <pre style="background: white"> ASSE X : 
-ASSE Y :
-          </pre>
-        </td>
-      </tr>
-    </table>
-  </div>
-  <div id="curve_chart" class="col-sm-6" style="height: 500px"></div>
-</div>
-<div class="row">
-  <div class="col-sm-7"></div>
-  <div class="col-sm-4">
-      <div class="input-group">
-          <span class="input-group-addon" id="basic-addon1">f(x) = </span>
-          <input type="text" class="form-control" placeholder="Input your equation" id="eq">
-          <span class="input-group-btn">
-            <button class="btn btn-primary" type="button" id="c">Do stuff</button>
-          </span>    
+  <div class="col-sm-1"></div>
+  <div class="col-sm-10">
+    <div class="input-group">
+      <span class="input-group-addon" id="basic-addon1">f(x) = </span>
+      <input type="text" class="form-control" placeholder="Input your equation" id="eq">
+      <span class="input-group-btn">
+        <button class="btn btn-default" type="button" id="c">Do stuff</button>
+      </span>    
+    </div>
+    <br>
+    <p>Definisci l'intervallo</p>
+    <div class='row'>
+      <div class="col-sm-1">
+        <input type="number" class="form-control" placeholder="a" id="a"></div>
+      <div class="col-sm-1">
+        <input type="number" class="form-control" placeholder="b" id="b"></div>
+      <p id='er'></p>
+    </div>
+    <br><br>
+    <div class="row">
+      <div class="col-sm-3">
+        <h5>BISEZIONE </h5>
       </div>
+      <div class="col-sm-3">
+        <h5>TANGENTE </h5>
+      </div>
+      <div class="col-sm-3">
+        <h5>SECANTI</h5>
+      </div>
+      <div class="col-sm-3">
+        <h5>PUNTO UNITO</h5>
+      </div>
+    </div>
+    <br><br>
+    <div class="row">
+      <div id="curve_chart" class="col-sm-6" style="width: 1100px; height: 400px"></div>
+    </div>
+      <br>
+  <div class="row">
+    <div class="col-sm-4">
+      <h5>C.E. </h5>
+    </div>
+    <div class="col-sm-4">
+      <h5>SIMMETRIE </h5>
+    </div>
+    <div class="col-sm-4">
+      <h5>INTERSEZIONE CON GLI ASSI </h5>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-4">
+    <h5>STUDIO DEL SEGNO </h5>
+    </div>
+    <div class="col-sm-4">
+    <h5>LIMITI </h5>
+    </div>
+    <div class="col-sm-4">
+    <h5>DERIVATA </h5>
+    </div>
+    </div>
+  </div>
+  <br>
+  </div>
+
 </div>
-</div>
-<br>
+
 </body>
 <script type="text/javascript" src="jQ_320.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
